<package>
  <name>pr2_2dnav</name>
  <version>1.0.2</version>
  <description>This application allows the PR2 robot to navigate autonomously with a pre-specified static map.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_2dnav</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Eitan Marder-Eppstein</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_navigation_global</build_depend>
  <build_depend>pr2_navigation_perception</build_depend>
  <build_depend>pr2_navigation_teleop</build_depend>
  <build_depend>pr2_machine</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_navigation_global</run_depend>
  <run_depend>pr2_navigation_perception</run_depend>
  <run_depend>pr2_navigation_teleop</run_depend>
  <run_depend>pr2_machine</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_navigation_global</test_depend> -->
  <!-- <test_depend>pr2_navigation_perception</test_depend> -->
  <!-- <test_depend>pr2_navigation_teleop</test_depend> -->
  <!-- <test_depend>pr2_machine</test_depend> -->

</package>

